versioned_docs/version-1.22/reference/faqs.mdx
---
title: Frequently Asked Questions (FAQs)
description: Frequently asked questions about Okteto
sidebar_label: FAQs
id: faqs
---

## Can I use Okteto CLI with Minikube?

Yes. Okteto CLI accelerates your development workflow regardless of where your Kubernetes cluster is running.

If you can run `kubectl apply`, you can benefit from Okteto CLI.

For Minikube, k3s, or similar local Kubernetes distributions, you can directly use our [open source project](https://github.com/okteto/okteto). For shared remote clusters, we recommend you take a look at [Okteto](https://okteto.com/) to handle credential management, namespace isolation, integration with GitHub among other things.

## Why is Okteto better than traditional development?

Among the many advantages, Okteto allows developers to:

- Reduce local setup and eliminate integration issues by developing the same way your application runs in production
- Test your application as fast as you type code, without needing to use `docker` or `kubectl` in your inner loop cycle
- No more CPU cycles wasted in your machine. Hardware and network just limited by the power of the cloud
- Your development endpoints are always available. No need to expose your local machine to the internet through remote tunnels

## How is Okteto different from other tools like Skaffold?

Skaffold automates the workflow for building, pushing, and deploying your application. You iterate on your application source code locally and then deploy to local or remote Kubernetes clusters.

Okteto's philosophy is to move development entirely to Kubernetes. The Skaffold pipeline, even though automated, is still slow. With Okteto, you code locally in your favorite IDE and Okteto automatically synchronizes your changes to your remote development environment. No commit, build, push, or deploy required.

The main differences from tools like Skaffold are:

- Okteto decouples deployment from development. You can deploy your application with `kubectl`, `Helm`, a serverless framework or even a CI job and use Okteto later to develop any component of your application
- Use any docker image as your remote development environment, with your favorite tools. Okteto doesn't require you to change the way you build, debug, or deploy your applications. Since builds are executed in your remote development environment, you benefit from fast incremental builds, hot reloaders, or the dependency caching offered by your programming language. Native builds are always faster than building images and redeploying containers
- You can integrate Okteto with your local IDE remote plugins, making it possible to execute your favorite IDE extensions and debuggers as you develop your application directly in Kubernetes
- Okteto provides bidirectional synchronization. For example, you can execute package managers like `npm` or `pip` in your remote development environment and the changes are synchronized back to your local file system

## Is Okteto compatible with Flux/ArgoCD?

Okteto decouples deployment from development, making it possible to use it with tools like Flux or ArgoCD.

We recommend you to stop the Flux/ArgoCD reconciliation loop while running `okteto up`. For example, add this field to your Okteto Manifest to stop the Flux reconciliation loop:

```yaml
annotations:
  fluxcd.io/ignore: "true"
```

:::tip
Please see our [ArgoCD Configuration Guide](self-hosted/manage/argocd.mdx) for our full recommendation on deploying Okteto with ArgoCD
:::


## How to use private images?

In order to use your private registry credentials you must configure a [pull secret](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/) and use it in your Kubernetes manifests.

Alternatively, follow these steps if you want to configure your private registry credentials for your default service account:

- First, create a `docker-registry` secret with your registry credentials:

```console
$ kubectl create secret docker-registry regcred --docker-server=<your-registry-server> --docker-username=<your-name> --docker-password=<your-pword> --docker-email=<your-email>
```

:::tip

More information on how to create `docker-registry` secrets [is available here](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#registry-secret-existing-credentials).

:::

- Update your service account to automatically inject the registry secret when deploying resources in the namespace:

```console
$ kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "regcred"}]}'
```

:::tip

If your resources use a different `serviceAccountName`, replace `default` with that value in the command above.

:::

With this configuration, all the deployments, stateful sets, jobs, and development containers launched in your namespace will automatically use your registry credentials when pulling private images.


## Why are my [Endpoints](core/endpoints/automatic-ssl.mdx) not present in the CLI or UI?

Endpoint links are not present within Okteto if there are no services actively running. If your endpoints are missing, consider the following states and their implications:

#### Progressing: 
* Description: Your deployment is in the process of being rolled out
* Possible Causes:
  * Your service is still being started
  * Okteto is waiting for all healthchecks to pass
  * There are pending updates or new deployments
* Actions:
  * Wait for the deployment to complete
  * Look at the events of the deployment for any issues

#### Pulling:
* Description: The image for your deployment is in the process of being pulled
* Possible Causes:
  * Your service is still being started
* Actions:
  * Wait for the deployment to complete
  * Look at the events of the deployment for any issues

#### Booting:
* Description: Starting the containers for your deployment
* Possible Causes:
  * All containers for your service are not yet ready
* Actions:
  * Wait for all containers to finish starting and enter their ready state
  * Look at the events of the deployment for any issues

#### Running:
* Description: Your deployment is active, and the service should be running correctly
* Possible Causes:
  * Network policies or firewall rules could be blocking the endpoint
* Actions:
  * Verify the service annotations in your manifest to ensure `dev.okteto.com/auto-ingress: "true"` is present
  * Verify your [Docker Compose endpoints](reference/docker-compose.mdx#endpoints-object-optional) are configured correctly

#### Error: 
* Description: There is an issue with your deployment preventing the service from running correctly
* Possible Causes:
  * Errors in the application code or container image
  * Misconfiguration in your service or deployment manifest
  * Insufficient resources or quota limits in the cluster
* Actions:
  * Check the logs of the affected service through the UI or with [`okteto logs`](reference/okteto-cli.mdx#logs)
  * Validate the container image and configuration settings
  * Ensure that resource requests and limits are properly set and the cluster has enough capacity


## Every time I make a change, tsc detects two changes:

This is related to how syncthing interacts with `tsc`. Syncthing creates a temporary file and replaces the original file with the new one.

To solve the problem you just add the flag `--synchronousWatchDirectory` to your `tsc` command.

## I cannot connect to the Kubernetes cluster using the kubeconfig file generated by Okteto

Starting with Okteto CLI version `2.20`, the Kubeconfig file generated by Okteto uses a [credential plugin](https://kubernetes.io/docs/reference/access-authn-authz/authentication/#client-go-credential-plugins) to get the credentials for your Kubernetes clusters from your Okteto instance. It is a typical pattern used by many Kubernetes providers, such as Google Kubernetes Engine (GKE), Azure Kubernetes Service (AKS), or Amazon Elastic Kubernetes Service (EKS) to connect to Kubernetes clusters.

We recommend you add the Okteto CLI to your PATH and run the 'okteto context' command to connect your CLI to your Okteto instance before executing the `okteto kubeconfig` command. You can also optionally download your Kubeconfig from the Okteto UI. Please refer to [our documentation](get-started/install-okteto-cli.mdx) for more information on this topic.

Once you have the CLI installed you have to connect to your instance using the command `okteto context use https://okteto.example.com` as is described [here](get-started/install-okteto-cli.mdx). If you're not logged into Okteto yet, it will also run the login sequence.

Once your Okteto context is configured to access Okteto, you should be able to connect to your Kubernetes cluster using the kubeconfig file generated by Okteto or generate a new one running [`okteto kubeconfig`](reference/okteto-cli.mdx#kubeconfig).

You can also disable the usage of the credential plugin by setting the environment variable `OKTETO_USE_STATIC_KUBETOKEN` to `true` before running any Okteto command. Be aware that using those static tokens are not recommended by Kubernetes and you will start getting warnings in your `kubectl` output starting with Kubernetes version `1.27`.